feat: Implement search functionality with results display and highlight feature

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
             <div class="search__container">
                 <i class="fi fi-rr-search"></i>
                 <input id="query" name="query" type="search" placeholder="Search for a place…" autocomplete="off" />
+
+                <div id="search-results" class="search__results">
+                </div>
             </div>
             <button type="submit">Search</button>
         </section>
