Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <section class="weather" id="weather" aria-live="polite" aria-busy="false">
                 <div class="weather__main skeleton">
                     <div class="weather__location skeleton-box">
+                        <div class="loader"></div>
                         <p>Loading...</p>
                     </div>
                 </div>
